# USD_PathmapResolver

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  debugCodes.cpp  debugCodes.h  module.cpp  moduleDeps.cpp  pathmapResolver.json  plugInfo.json.in  resolver.cpp  resolver.h  resolverContext.cpp  resolverContext.h  wrapResolver.cpp  wrapResolverContext.cpp
